fixed padding and avatar spacing

--- a/src/components/avatar.css
+++ b/src/components/avatar.css
@@ -1,32 +1,34 @@
+.avatar-container {
+    width: 100%;
+}
+
 .avatar {
-    height: 80px;
-    width: 80px;
+    height: 70px;
+    width: 70px;
     border-radius: 100%;
-    border-style: solid;
-    border-color: white;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-right: 1rem;
+    border: 1px solid white;
 }
 
 .socialicons {
-    margin-top: auto;
-    margin-bottom: auto;
+    width: 100%;
+    padding: 0% 30%;
 }
 
 .socialicon, .socialicon:hover {
     font-size: 25px;
-    padding: 0px 13px;
     color: rgb(250, 95, 255);
     text-decoration: none;
     text-shadow: 3px 3px 1px #000;
 }
 
-@media (min-width: 650px) {
+@media (min-width: 768px) {
     .avatar {
         height: 100px;
         width: 100px;
-        padding-right: 0px;
-        margin-right: 0rem;
+        border: 2px solid white;
+    }
+
+    .socialicons {
+        padding: 0% 10%;
     }
 }
