--- a/src/components/header.css
+++ b/src/components/header.css
@@ -4,7 +4,7 @@
     border: 2px solid rgb(250, 95, 255, 0.25);
     border-radius: 1%;
     margin: 10px;
-    padding: 20px;
+    padding: 10px 10px 20px 10px;
     overflow: hidden;
 }
 
