--- a/src/components/playerInfo.css
+++ b/src/components/playerInfo.css
@@ -6,7 +6,6 @@
   
 .playerbio {
     font-size: 23px;
-    padding-top: 10px;
     margin-bottom: 0px;
     text-shadow: 3px 3px 1px #000;
 
